# rust_mysql_backend_project

./: .env.sample  Cargo.toml  Readme.md
docker_mysql/: .env.sample  docker-compose.yml
src/: main.rs
src/api/: mysqlapi.rs
src/db/: database.rs
src/models/: incoming.rs  outgoing.rs
