[package]
name = "mysql_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
async-trait = "0.1.77"
derive_more = "0.99.17"
json = "0.12.4"
mysql_async = "0.34.1"
serde = {version = "1.0.195", features = ["derive"]}
serde_json = "1.0.113"
validator = {version = "0.17.0", features = ["derive"]}
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15.0"